[package]
name = "webplayground"
version = "0.1.0"
edition = "2021"
author=["sidy badji","baadjis <baadjisidy@gmail.com>"]


[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature in order to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "HtmlTextAreaElement",
    
    "Event",
    "InputEvent",

    "MouseEvent",
    "DomRect",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
